Fix container height
SQUASHED: AUTO-COMMIT-css-main.css,AUTO-COMMIT-templates-lively-dom-inspector.js,

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@
 
 #container {
   width: calc(100%);
-  height: calc(100%);
+  height: calc(100% - 31.2px);
 }
 
 .created {
